--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -3,6 +3,7 @@ import Base from "~/layouts/Base.astro";
 import Footer from "~/components/Footer.astro";
 
 let docs = await Astro.glob("../pages/blog/*.md");
+
 docs = docs.filter((post) => !post.frontmatter.draft);
 
 const index = docs.pop();
@@ -34,27 +35,21 @@ const heading_depth_class_map = {
         {
           [index, ...docs].map(async (h) => {
             const headings = await h.getHeadings();
+            const frontmatter = h.frontmatter;
             return (
               <Fragment>
                 {headings.length > 0 && (
                   <nav class="achievement-panel p-1">
                     <div class="flex flex-col gap-1 py-2 px-3 text-white">
-                      {headings.map((heading) => {
-                        // if (heading.depth > 2) return;
-                        if (heading.depth > 1) return;
-                        return (
-                          <a
-                            // href={`${h.url}#${heading.slug}`}
-                            href={`${h.url}`}
-                            class:list={[
-                              heading_depth_class_map[heading.depth],
-                              "hover:underline text-shadow-sm",
-                            ]}
-                          >
-                            {heading.text}
-                          </a>
-                        );
-                      })}
+                      <a
+                        href={`${h.url}`}
+                        class:list={[
+                          heading_depth_class_map[1],
+                          "hover:underline text-shadow-sm",
+                        ]}
+                      >
+                        {frontmatter.title}
+                      </a>
                     </div>
                   </nav>
                 )}
