--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Base from "~/layouts/Base.astro";
       欢迎来到我的<a href="/blog" class="text-link hover:underline">blog</a
       >博客主题《我的世界》，梦开始的地方
     </p>
-    <h3 class="text-center underline text-4xl text-white">一些项目</h3>
+    <h3 class="text-center underline text-4xl text-white">Project</h3>
     <div class="flex items-center justify-center">
       <ul>
         <li>
