--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Base from "~/layouts/Base.astro";
     <h3 class="underline text-2xl sm:text-4xl text-white">yu blog</h3>
     <p class="indent-5 text-white">
       欢迎来到我的<a href="/blog" class="text-link hover:underline">blog</a
-      >博客主题《我的世界》，梦开始的地方
+      >《我的世界》，梦开始的地方
     </p>
     <h3 class="text-center underline text-4xl text-white">Project</h3>
     <div class="flex items-center justify-center">
