--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const {
 ]}>
     <div class="flex flex-col sm:flex-row items-center justify-between h-full p-5 bg-dark-75 text-white">
         <header class="flex flex-col gap-3 w-full sm:w-[60%]">
-            <img src="/imgs/project-logo.png" class="h-full max-w-[30ch] m-[-14px]" />
+            <!-- <img src="/imgs/project-logo.png" class="h-full max-w-[30ch] m-[-14px]" /> -->
             </header>
         <nav class="self-end flex flex-col items-end gap-1 text-link">
             <a href="https://github.com/fsyud" class="link">Github</a>
