--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const {
             </header>
         <nav class="self-end flex flex-col items-end gap-1 text-link">
             <a href="https://github.com/fsyud" class="link">Github</a>
-            <a href="https://astro.build" class="link">Astro</a>
+            <!-- <a href="https://astro.build" class="link">Astro</a> -->
         </nav>
     </div>
 </footer>
