--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -35,21 +35,25 @@ const heading_depth_class_map = {
         {
           [index, ...docs].map(async (h) => {
             const headings = await h.getHeadings();
-            const frontmatter = h.frontmatter;
             return (
               <Fragment>
                 {headings.length > 0 && (
                   <nav class="achievement-panel p-1">
                     <div class="flex flex-col gap-1 py-2 px-3 text-white">
-                      <a
-                        href={`${h.url}`}
-                        class:list={[
-                          heading_depth_class_map[1],
-                          "hover:underline text-shadow-sm",
-                        ]}
-                      >
-                        {frontmatter.title}
-                      </a>
+                      {headings.map((heading) => {
+                        if (heading.depth > 3) return;
+                        return (
+                          <a
+                            href={`${h.url}#${heading.slug}`}
+                            class:list={[
+                              heading_depth_class_map[heading.depth],
+                              "hover:underline text-shadow-sm",
+                            ]}
+                          >
+                            {heading.text}
+                          </a>
+                        );
+                      })}
                     </div>
                   </nav>
                 )}
