--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,12 @@ import Base from "~/layouts/Base.astro";
   <div
     class="flex flex-col justify-center w-full sm:w-[90%] md:w-[80%] lg:w-[70%] mx-auto gap-5 py-5 px-2 markdown"
   >
-    <h3 class="underline text-2xl sm:text-4xl text-white">yu blog</h3>
-    <p class="indent-5 text-white">
+    <h3 class="underline text-2xl sm:text-4xl text-white">Karl</h3>
+    <p class="text-white">
       欢迎来到我的<a href="/blog" class="text-link hover:underline">blog</a
       >《我的世界》，梦开始的地方
     </p>
-    <h3 class="text-center underline text-4xl text-white">Project</h3>
+    <h3 class="text-left underline text-4xl text-white">Project</h3>
     <div class="flex items-center justify-center">
       <ul>
         <li>
