feat: add photos nav

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,6 +17,7 @@ const {
                 <slot />
                 <a href="/" class="hover:underline">Home</a>
                 <a href="/blog" class="hover:underline">Blog</a>
+                <a href="/photos" class="hover:underline">Photos</a>
                 <a href="https://github.com/fsyud" class="button py-1 px-2 text-lg" target="_blank">Github</a>
             </nav>
         </div>
